Fix layout issue with overflow extensions view.

Bug: 913274
Change-Id: I8ca09d553d4cce55887604f07300aa0685a7f498
Reviewed-on: https://chromium-review.googlesource.com/c/1372309
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615662}
Former-commit-id: 5067f2ca9220fc06511f1ab299bcf50a8262d3b4